2003-07-23  Stepan Kasal  <kasal@ucw.cz>

	* src/Makefile.am: Add the egrep and fgrep scripts to CLEANFILES.

2003-07-23  Stepan Kasal  <kasal@ucw.cz>
	* tests/backref.sh: Messages fixed.

2003-07-08  David Kaelbling  <drk@sgi.com>  (tiny change)
	* src/dfa.c: remove non-constant initializers from dfa.c

2003-06-16  Stepan Kasal  <kasal@ucw.cz>
	* doc/grep.1: two typos "--line-buffered [...] penalty"
	* doc/grep.texi: a typo

2003-06-12  Bernhard Rosenkraenzer <bero@arklinux.org>
	* README-alpha: Mention bug tracking system and grep-devel-list

2003-06-05  Stepan Kasal  <kasal@ucw.cz>
	* tests/formatbre.awk, tests/formatbre.awk: probably unused, so
	  I've removed them.

2003-06-05  Stepan Kasal  <kasal@ucw.cz>
	* intl/Makefile: remove generated file.

2003-06-04  Stepan Kasal  <kasal@ucw.cz>
	* src/dfa.c: typos fixed.

2003-05-30  Bernhard Rosenkraenzer <bero@arklinux.org>
	* src/dfa.c: Speed up multibyte support (Patch from Tim Waugh)
	* src/search.c: Speed up multibyte support (Patch from Tim Waugh)

2003-01-18  Bernhard Rosenkraenzer <bero@arklinux.org>
	* src/grep.c: Fix -i -o combination (Patch from Tim Waugh)

2002-03-26  Bernhard Rosenkraenzer <bero@arklinux.org>
	* src/grep.c: Don't fail if we don't have an stdout fd and -q
	  is used (happens e.g. on calls from hotplug scripts)
	* src/grep.c: Don't hang forever if fed with an empty string to
	  grep for and --color enabled
	* src/grep.c: Fix infinite loop on
	  echo "1 one" | grep -E "[0-9]*" -o
	  echo "1 one" | grep -E "[0-9]*" --color
	* po/*: Sync with translation project
	* src/grep.c, src/Makefile.am, configure.in: Add patch from
	  Paul Eggert <eggert@twinsun.com> to comply with ridiculous
	  guidelines (don't act differently if invoked as egrep or fgrep)
	* configure.in: Bump version number, require a recent autoconf

2002-03-14  Bernhard Rosenkraenzer <bero@arklinux.org>
	* src/Makefile.am, po/Makefile.in.in: Support DESTDIR properly
	* tests/bre.tests: Add fix from